first 2 live templates

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.groovinchip.macosuiintellij
+pluginGroup = dev.groovinchip.macosuiintellij
 pluginName = macos_ui_intellij
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
